Updating baseMemoir plots, adding PEtracer draft results

--- a/real_data/preprocess/baseMemoir densities.ipynb
+++ b/real_data/preprocess/baseMemoir densities.ipynb
@@ -125,7 +125,9 @@
   {
    "cell_type": "markdown",
    "id": "0d5f478e-4a5a-4d19-8a64-48ade3e8bdfe",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "#### Evaluate the non-parametric nature\n",
     "\n",
