--- a/real_data/baseMemoir/README
+++ b/real_data/baseMemoir/README
@@ -8,6 +8,7 @@ Notes:
 - translated trees back to before their nexus format relabeling
 - separated into two trees; one with spatial internal labeling, and one with branch lengths.
 
+Note that NEXUS files were translated from numeric IDs into cell names in order to match the centroid pixel information.
 
 (base) gc3045@COS-T0264KMR6R trees % nw_labels -I /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/inputs/trees/published.baseMemoir.pos2.newick > published.baseMemoir.pos2.cellnames.txt
 (base) gc3045@COS-T0264KMR6R trees % nw_labels -I /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/inputs/trees/published.baseMemoir.pos5.newick > published.baseMemoir.pos5.cellnames.txt
@@ -54,3 +55,6 @@ input tree /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/inputs//tree
 Total min square sum: 91.13278941149107
 Total maximum likelihood under Brownian motion migration: -363.79538391355425
 Wrote inferred internal node states to colony5_bm__ancestral_labeling.txt
+
+python multi_log_likelihood_versus_time.py /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony2/fastlaml_baseMemoir.colony2.neighbor_joining_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony2/fastlaml_baseMemoir.colony2.published_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony2/fastlaml_baseMemoir.colony2.stepwise_addition_01_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony2/fastlaml_baseMemoir.colony2.stepwise_addition_02_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony2/fastlaml_baseMemoir.colony2.stepwise_addition_03_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony2/fastlaml_baseMemoir.colony2.stepwise_addition_04_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony2/fastlaml_baseMemoir.colony2.stepwise_addition_05_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony2/fastlaml_baseMemoir.colony2.stepwise_addition_06_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony2/fastlaml_baseMemoir.colony2.stepwise_addition_07_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony2/fastlaml_baseMemoir.colony2.stepwise_addition_08_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony2/fastlaml_baseMemoir.colony2.stepwise_addition_09_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony2/fastlaml_baseMemoir.colony2.stepwise_addition_10_results.json
+python multi_log_likelihood_versus_time.py /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony5/fastlaml_baseMemoir.colony5.neighbor_joining_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony5/fastlaml_baseMemoir.colony5.published_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony5/fastlaml_baseMemoir.colony5.stepwise_addition_01_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony5/fastlaml_baseMemoir.colony5.stepwise_addition_02_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony5/fastlaml_baseMemoir.colony5.stepwise_addition_03_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony5/fastlaml_baseMemoir.colony5.stepwise_addition_04_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony5/fastlaml_baseMemoir.colony5.stepwise_addition_05_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony5/fastlaml_baseMemoir.colony5.stepwise_addition_06_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony5/fastlaml_baseMemoir.colony5.stepwise_addition_07_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony5/fastlaml_baseMemoir.colony5.stepwise_addition_08_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony5/fastlaml_baseMemoir.colony5.stepwise_addition_09_results.json /Users/gc3045/git/laml2-experiments/real_data/baseMemoir/runjobs/outputs_baseMemoir_colony5/fastlaml_baseMemoir.colony5.stepwise_addition_10_results.json
